feat: add Zonetic logo and update favicons
- Replace SVG logos with zonetic_logo.png in Header and Footer
- Add comprehensive favicon support (ico, png, apple-touch-icon)
- Update site.webmanifest with correct paths and branding
- Move all image assets to public/images/

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <title>Zonetic | Architekti Digitální Budoucnosti</title>
   <meta name="description"
     content="Komplexní IT řešení, vývoj webů, strategická správa sociálních sítí a hosting. Inovace pro rok 2026." />
-  <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+  <link rel="manifest" href="/images/site.webmanifest" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
   <script type="importmap">
