Fix Technologies section connections and visibility; general updates

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Zonetic | Architekti Digitální Budoucnosti</title>
   <meta name="description"
     content="Komplexní IT řešení, vývoj webů, strategická správa sociálních sítí a hosting. Inovace pro rok 2026." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
