feat(seo): add meta tags, sitemap, and robots.txt

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
   <title>Zonetic | Architekti Digitální Budoucnosti</title>
   <meta name="description"
     content="Komplexní IT řešení, vývoj webů, strategická správa sociálních sítí a hosting. Inovace pro rok 2026." />
+  <meta name="keywords"
+    content="Zonetic, IT řešení, vývoj webů, tvorba webových stránek, správa sociálních sítí, hosting, digitální agentura, webdesign, SEO optimalizace, online marketing, aplikace na míru" />
+  <meta name="author" content="Zonetic" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://www.zonetic.cz/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.zonetic.cz/" />
+  <meta property="og:title" content="Zonetic | Architekti Digitální Budoucnosti" />
+  <meta property="og:description"
+    content="Komplexní IT řešení, vývoj webů, strategická správa sociálních sítí a hosting. Pomáháme firmám růst v digitálním světě." />
+  <meta property="og:image" content="https://www.zonetic.cz/images/android-chrome-512x512.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.zonetic.cz/" />
+  <meta property="twitter:title" content="Zonetic | Architekti Digitální Budoucnosti" />
+  <meta property="twitter:description"
+    content="Komplexní IT řešení, vývoj webů, strategická správa sociálních sítí a hosting." />
+  <meta property="twitter:image" content="https://www.zonetic.cz/images/android-chrome-512x512.png" />
+
+  <!-- Favicons -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -14,10 +37,31 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
   <link rel="manifest" href="/images/site.webmanifest" />
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-
   <link rel="stylesheet" href="./index.css">
+
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Zonetic",
+      "url": "https://www.zonetic.cz",
+      "logo": "https://www.zonetic.cz/images/zonetic_logo.png",
+      "description": "Zonetic poskytuje komplexní IT řešení, vývoj webových aplikací a strategickou správu sociálních sítí.",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "info@zonetic.cz",
+        "contactType": "customer support"
+      },
+      "sameAs": [
+        "https://www.instagram.com/zonetic_group"
+      ]
+    }
+  </script>
 </head>
 
 <body>
